# World-Cup-Prediction

./: LICENSE  README.md  setup.cfg
config/: data_sources.json
data/live/: matches.csv
data/sample/: teams.csv
docs/: DATA_SOURCES.md  GITHUB_RELEASE.md
scripts/: run_demo.py  update_data.py
sfm_engine/: __init__.py  calibration.py  cli.py  dashboard.py  data_io.py  elo.py  models.py  monte_carlo.py  poisson.py  predictor.py  updater.py
