[metadata]
name = serenity-football-model
version = 0.1.0
description = Local football probability model with Elo, Poisson scoring, value index, and dashboard output.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = SFM Contributors
keywords = football, soccer, prediction, elo, poisson, analytics
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Information Analysis

[options]
packages = find:
python_requires = >=3.9

[options.packages.find]
include =
    sfm_engine*

[options.entry_points]
console_scripts =
    sfm = sfm_engine.cli:main
